added freevxfs report fact and management.

--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -6,3 +6,4 @@
 # modification on next agent run!!!!
 
 <% if @cramfsdisabled_manage -%>install cramfs /bin/true<% end -%>
+<% if @freevxfsdisabled_manage -%>install freevxfs /bin/true<% end -%>
