added missing hfs part in modprobe template

--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -8,3 +8,4 @@
 <% if @cramfsdisabled_manage -%>install cramfs /bin/true<% end -%>
 <% if @freevxfsdisabled_manage -%>install freevxfs /bin/true<% end -%>
 <% if @jffs2disabled_manage -%>install jffs2 /bin/true<% end -%>
+<% if @hfsdisabled_manage -%>install hfs /bin/true<% end -%>
