added hfsplus report, fact and manage

--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -9,3 +9,4 @@
 <% if @freevxfsdisabled_manage -%>install freevxfs /bin/true<% end -%>
 <% if @jffs2disabled_manage -%>install jffs2 /bin/true<% end -%>
 <% if @hfsdisabled_manage -%>install hfs /bin/true<% end -%>
+<% if @hfsplusdisabled_manage -%>install hfsplus /bin/true<% end -%>
