--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -10,3 +10,4 @@
 <% if @jffs2disabled_manage -%>install jffs2 /bin/true<% end -%>
 <% if @hfsdisabled_manage -%>install hfs /bin/true<% end -%>
 <% if @hfsplusdisabled_manage -%>install hfsplus /bin/true<% end -%>
+<% if @squashfsdisabled_manage -%>install squashfs /bin/true<% end -%>
