--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -11,3 +11,4 @@
 <% if @hfsdisabled_manage -%>install hfs /bin/true<% end -%>
 <% if @hfsplusdisabled_manage -%>install hfsplus /bin/true<% end -%>
 <% if @squashfsdisabled_manage -%>install squashfs /bin/true<% end -%>
+<% if @udfdisabled_manage -%>install udf /bin/true<% end -%>
