--- a/templates/modprobe_CIS.conf
+++ b/templates/modprobe_CIS.conf
@@ -5,11 +5,11 @@
 # Don't edit manually, puppet will override any
 # modification on next agent run!!!!
 
-<% if @cramfsdisabled_manage -%>install cramfs /bin/true<% end -%>
-<% if @freevxfsdisabled_manage -%>install freevxfs /bin/true<% end -%>
-<% if @jffs2disabled_manage -%>install jffs2 /bin/true<% end -%>
-<% if @hfsdisabled_manage -%>install hfs /bin/true<% end -%>
-<% if @hfsplusdisabled_manage -%>install hfsplus /bin/true<% end -%>
-<% if @squashfsdisabled_manage -%>install squashfs /bin/true<% end -%>
-<% if @udfdisabled_manage -%>install udf /bin/true<% end -%>
+<% if @cramfsdisabled_manage -%>install cramfs /bin/true<% end %>
+<% if @freevxfsdisabled_manage -%>install freevxfs /bin/true<% end %>
+<% if @jffs2disabled_manage -%>install jffs2 /bin/true<% end %>
+<% if @hfsdisabled_manage -%>install hfs /bin/true<% end %>
+<% if @hfsplusdisabled_manage -%>install hfsplus /bin/true<% end %>
+<% if @squashfsdisabled_manage -%>install squashfs /bin/true<% end %>
+<% if @udfdisabled_manage -%>install udf /bin/true<% end %>
 
